--- a/bombers_revenge/tools.html
+++ b/bombers_revenge/tools.html
@@ -191,7 +191,11 @@
                 ++counter
             }
             if (counter === 4) {
-                window.location.replace('blueprintdigits.html')
+                fetch("http://pigamemaster.local:1880/cellLightsOn")
+                setTimeout(() => {
+                        window.location.replace('blueprintdigits.html')
+                    },500)
+
             }
             
             
