--- a/dinner_surprise/entree1.html
+++ b/dinner_surprise/entree1.html
@@ -1,8 +1,8 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=1280, height=800, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Employee Access Terminal</title>
 
   <style>
@@ -24,7 +24,7 @@
 
     html, body{
       margin:0; padding:0;
-      width:1280px; height:800px;
+      width:100%; height:100%;
       overflow:hidden;
       background: radial-gradient(1200px 800px at 30% 20%, #162131 0%, var(--bg) 60%);
       color: var(--text);
@@ -34,7 +34,7 @@
     }
 
     .app{
-      width:1280px; height:800px;
+      width:100%; height:100%;
       padding:18px;
       box-sizing:border-box;
       display:grid;
@@ -197,7 +197,7 @@
 <div class="app">
   <div class="topbar">
     <div class="brand">
-      <div class="logo">🍽️</div>
+      <div class="logo">ðŸ½ï¸</div>
       <div>
         <h1>Dining Room POS</h1>
         <div class="sub">Employee Access Terminal</div>
@@ -317,7 +317,7 @@
     if(selected.size === 5){
       if(isCorrect()){
         locked = true;
-        setStatus("Correct recipe…", "ok");
+        setStatus("Correct recipeâ€¦", "ok");
 
         triggerNR({
           event:"build_entree_solved",
@@ -356,3 +356,4 @@
 </script>
 </body>
 </html>
+
