--- a/dinner_surprise/entree2.html
+++ b/dinner_surprise/entree2.html
@@ -1,8 +1,8 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=1280, height=800, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Employee Access Terminal</title>
   <style>
     :root{
@@ -13,10 +13,10 @@
       --font: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       --green: rgba(80, 255, 160, .95);
     }
-    html, body{margin:0;padding:0;width:1280px;height:800px;overflow:hidden;
+    html, body{margin:0;padding:0;width:100%;height:100%;overflow:hidden;
       background: radial-gradient(1200px 800px at 30% 20%, #162131 0%, var(--bg) 60%);
       color:var(--text);font-family:var(--font);user-select:none;touch-action:manipulation;}
-    .app{width:1280px;height:800px;padding:18px;box-sizing:border-box;display:grid;grid-template-rows:84px 1fr;gap:14px;}
+    .app{width:100%;height:100%;padding:18px;box-sizing:border-box;display:grid;grid-template-rows:84px 1fr;gap:14px;}
     .topbar{display:flex;align-items:center;justify-content:space-between;background:linear-gradient(180deg,#182433 0%,#121a24 100%);
       border:1px solid var(--border);border-radius:var(--radius);padding:14px 18px;box-shadow:var(--shadow);}
     .brand{display:flex;align-items:center;gap:12px;}
@@ -61,7 +61,7 @@
 <div class="app">
   <div class="topbar">
     <div class="brand">
-      <div class="logo">🍽️</div>
+      <div class="logo">ðŸ½ï¸</div>
       <div>
         <h1>Dining Room POS</h1>
         <div class="sub">Employee Access Terminal</div>
@@ -171,7 +171,7 @@
     if(selected.size === 5){
       if(isCorrect()){
         locked = true;
-        setStatus("Correct recipe…", "ok");
+        setStatus("Correct recipeâ€¦", "ok");
 
         triggerNR({
           event:"build_entree_solved",
@@ -210,3 +210,4 @@
 </script>
 </body>
 </html>
+
