--- a/dinner_surprise/napkin_rings.html
+++ b/dinner_surprise/napkin_rings.html
@@ -1,8 +1,8 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=1280, height=800, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Employee Access Terminal</title>
 
   <style>
@@ -23,8 +23,8 @@
     html, body{
       margin:0;
       padding:0;
-      width:1280px;
-      height:800px;
+      width:100%;
+      height:100%;
       overflow:hidden;
       background: radial-gradient(1200px 800px at 30% 20%, #162131 0%, var(--bg) 60%);
       color: var(--text);
@@ -34,8 +34,8 @@
     }
 
     .app{
-      width:1280px;
-      height:800px;
+      width:100%;
+      height:100%;
       padding:18px;
       box-sizing:border-box;
       display:grid;
@@ -465,3 +465,4 @@
 </script>
 </body>
 </html>
+
