--- a/dinner_surprise/points_of_view.html
+++ b/dinner_surprise/points_of_view.html
@@ -1,8 +1,8 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=1280, height=800, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Employee Access Terminal</title>
 
   <style>
@@ -22,8 +22,8 @@
     html, body{
       margin:0;
       padding:0;
-      width:1280px;
-      height:800px;
+      width:100%;
+      height:100%;
       overflow:hidden;
       background: radial-gradient(1200px 800px at 30% 20%, #162131 0%, var(--bg) 60%);
       color: var(--text);
@@ -33,8 +33,8 @@
     }
 
     .app{
-      width:1280px;
-      height:800px;
+      width:100%;
+      height:100%;
       padding:18px;
       box-sizing:border-box;
       display:grid;
@@ -200,7 +200,7 @@
 <div class="app">
   <div class="topbar">
     <div class="brand">
-      <div class="logo">ðŸ½ï¸</div>
+      <div class="logo">Ã°Å¸ÂÂ½Ã¯Â¸Â</div>
       <div>
         <h1>Dining Room POS</h1>
         <div class="sub">Employee Access Terminal</div>
@@ -287,7 +287,7 @@
     const current = stateIdx.map(idx => POINTS[idx]);
     if(current.join() === CODE.join()){
       locked = true;
-      statusEl.textContent = "Correct perspectiveâ€¦";
+      statusEl.textContent = "Correct perspectiveÃ¢â‚¬Â¦";
       statusEl.classList.add("ok");
 
       triggerNR({
@@ -312,3 +312,4 @@
 </script>
 </body>
 </html>
+
