--- a/dinner_surprise/roses.html
+++ b/dinner_surprise/roses.html
@@ -1,8 +1,8 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=1280, height=800, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Employee Access Terminal</title>
 
   <style>
@@ -26,8 +26,8 @@
     html, body{
       margin:0;
       padding:0;
-      width:1280px;
-      height:800px;
+      width:100%;
+      height:100%;
       overflow:hidden;
       background: radial-gradient(1200px 800px at 30% 20%, #162131 0%, var(--bg) 60%);
       color: var(--text);
@@ -37,8 +37,8 @@
     }
 
     .app{
-      width:1280px;
-      height:800px;
+      width:100%;
+      height:100%;
       padding:18px;
       box-sizing:border-box;
       display:grid;
@@ -196,7 +196,7 @@
 
   <div class="topbar">
     <div class="brand">
-      <div class="logo">🍽️</div>
+      <div class="logo">ðŸ½ï¸</div>
       <div>
         <h1>Dining Room POS</h1>
         <div class="sub">Employee Access Terminal</div>
@@ -300,7 +300,7 @@
 
     if(current.join() === CODE.join()){
       locked = true;
-      statusEl.textContent = "Correct pattern…";
+      statusEl.textContent = "Correct patternâ€¦";
       statusEl.classList.add("ok");
 
       triggerNR({
