Adjusted screen resolution again

--- a/dinner_surprise/roses.html
+++ b/dinner_surprise/roses.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=1138, height=712, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Employee Access Terminal</title>
 
   <style>
@@ -325,3 +325,5 @@
 </script>
 </body>
 </html>
+
+
