--- a/dinner_surprise/entree1.html
+++ b/dinner_surprise/entree1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=1138, height=712, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Employee Access Terminal</title>
 
   <style>
@@ -24,7 +24,7 @@
 
     html, body{
       margin:0; padding:0;
-      width:100%; height:100%;
+      width:1138px; height:712px;
       overflow:hidden;
       background: radial-gradient(1200px 800px at 30% 20%, #162131 0%, var(--bg) 60%);
       color: var(--text);
@@ -34,7 +34,7 @@
     }
 
     .app{
-      width:100%; height:100%;
+      width:1138px; height:712px;
       padding:18px;
       box-sizing:border-box;
       display:grid;
@@ -356,4 +356,6 @@
 </script>
 </body>
 </html>
+
+
 
