--- a/dinner_surprise/entree3.html
+++ b/dinner_surprise/entree3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=1138, height=712, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Employee Access Terminal</title>
   <style>
     :root{
@@ -13,10 +13,10 @@
       --font: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       --green: rgba(80, 255, 160, .95);
     }
-    html, body{margin:0;padding:0;width:100%;height:100%;overflow:hidden;
+    html, body{margin:0;padding:0;width:1138px;height:712px;overflow:hidden;
       background: radial-gradient(1200px 800px at 30% 20%, #162131 0%, var(--bg) 60%);
       color:var(--text);font-family:var(--font);user-select:none;touch-action:manipulation;}
-    .app{width:100%;height:100%;padding:18px;box-sizing:border-box;display:grid;grid-template-rows:84px 1fr;gap:14px;}
+    .app{width:1138px;height:712px;padding:18px;box-sizing:border-box;display:grid;grid-template-rows:84px 1fr;gap:14px;}
     .topbar{display:flex;align-items:center;justify-content:space-between;background:linear-gradient(180deg,#182433 0%,#121a24 100%);
       border:1px solid var(--border);border-radius:var(--radius);padding:14px 18px;box-shadow:var(--shadow);}
     .brand{display:flex;align-items:center;gap:12px;}
@@ -210,4 +210,6 @@
 </script>
 </body>
 </html>
+
+
 
