--- a/dinner_surprise/index.html
+++ b/dinner_surprise/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=1138, height=712, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Employee Login</title>
   <style>
     :root{
@@ -22,8 +22,8 @@
 
     html, body{
       margin:0; padding:0;
-      width:1138px; height:712px;
-      overflow:hidden;
+      width:100%; height:100%;
+      overflow:visible;
       background: radial-gradient(1200px 800px at 30% 20%, #162131 0%, var(--bg) 60%);
       color: var(--text);
       font-family: var(--font);
@@ -32,7 +32,7 @@
     }
 
     .app{
-      width:1138px; height:712px;
+      width:100%; height:100%;
       box-sizing:border-box;
       padding:18px;
       display:grid;
@@ -333,5 +333,6 @@
 </script>
 </body>
 </html>
+
 
 
