--- a/dinner_surprise/napkin_rings.html
+++ b/dinner_surprise/napkin_rings.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=1138, height=712, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Employee Access Terminal</title>
 
   <style>
@@ -25,7 +25,7 @@
       padding:0;
       width:100%;
       height:100%;
-      overflow:hidden;
+      overflow:visible;
       background: radial-gradient(1200px 800px at 30% 20%, #162131 0%, var(--bg) 60%);
       color: var(--text);
       font-family: var(--font);
@@ -465,6 +465,7 @@
 </script>
 </body>
 </html>
+
 
 
 
