--- a/dinner_surprise/entree3.html
+++ b/dinner_surprise/entree3.html
@@ -21,7 +21,7 @@
       border:1px solid var(--border);border-radius:var(--radius);padding:14px 18px;box-shadow:var(--shadow);}
     .brand{display:flex;align-items:center;gap:12px;}
     .logo{width:46px;height:46px;border-radius:14px;background:rgba(255,255,255,.06);border:1px solid rgba(255,255,255,.10);
-      display:flex;align-items:center;justify-content:center;font-size:24px;}
+      display:flex;align-items:center;justify-content:center;font-size:24px;\r\n      font-family: "Apple Color Emoji","Segoe UI Emoji","Noto Color Emoji",sans-serif;}
     .brand h1{margin:0;font-size:22px;letter-spacing:.4px;}
     .brand .sub{margin-top:2px;font-size:13px;color:var(--muted);}
     .rightHeader{display:flex;align-items:center;gap:12px;}
@@ -61,7 +61,7 @@
 <div class="app">
   <div class="topbar">
     <div class="brand">
-      <div class="logo">ðŸ½ï¸</div>
+      <div class="logo">&#x1F37D;&#xFE0F;</div>
       <div>
         <h1>Dining Room POS</h1>
         <div class="sub">Employee Access Terminal</div>
@@ -171,7 +171,7 @@
     if(selected.size === 5){
       if(isCorrect()){
         locked = true;
-        setStatus("Correct recipeâ€¦", "ok");
+        setStatus("Correct recipe&#x2026;", "ok");
 
         triggerNR({
           event:"build_entree_solved",
@@ -210,6 +210,7 @@
 </script>
 </body>
 </html>
+
 
 
 
