--- a/dinner_surprise/index.html
+++ b/dinner_surprise/index.html
@@ -63,7 +63,7 @@
       display:flex;
       align-items:center;
       justify-content:center;
-      font-size:24px;
+      font-size:24px;\r\n      font-family: "Apple Color Emoji","Segoe UI Emoji","Noto Color Emoji",sans-serif;
     }
 
     .brand h1{ margin:0; font-size:22px; letter-spacing:.4px; }
@@ -82,7 +82,7 @@
     .content{
       height:100%;
       display:grid;
-      grid-template-columns: 1fr 520px;
+      grid-template-columns: minmax(0, 1fr) minmax(0, 480px);
       gap:14px;
     }
 
@@ -101,12 +101,13 @@
       justify-content:center;
       gap:16px;
       padding: 10px 30px;
+      min-width:0;
     }
 
     .cardHeader,
     .field{
-      width: 560px;
-      max-width: 560px;
+      width: 100%;
+      max-width: 100%;
     }
 
     .cardHeader{
@@ -146,7 +147,8 @@
       background: rgba(255,255,255,.06);
       border: 1px solid rgba(255,255,255,.08);
       display:flex; align-items:center; justify-content:center;
-      font-size:18px;
+      \1
+      font-family: \"Apple Color Emoji\",\"Segoe UI Emoji\",\"Noto Color Emoji\",sans-serif;
     }
 
     .pin{
@@ -188,13 +190,14 @@
       display:flex;
       flex-direction:column;
       justify-content:center;
+      min-width:0;
     }
 
     .keys{
       display:grid;
       grid-template-rows: repeat(4, 1fr);
       gap:12px;
-      height: 620px;
+      height: 100%;
       padding: 10px;
     }
 
@@ -225,13 +228,13 @@
   <div class="app">
     <div class="topbar">
       <div class="brand">
-        <div class="logo" aria-hidden="true">ðŸ½ï¸</div>
+        <div class="logo" aria-hidden="true">&#x1F37D;&#xFE0F;</div>
         <div>
           <h1>Dining Room POS</h1>
           <div class="sub">Employee Access Terminal</div>
         </div>
       </div>
-      <div class="pill">Touchscreen â€¢ PIN</div>
+      <div class="pill">Touchscreen &#x2022; PIN</div>
     </div>
 
     <div class="content">
@@ -244,7 +247,7 @@
         <div class="field" id="pinField">
           <div class="label">EMPLOYEE PIN</div>
           <div class="pinRow">
-            <div class="icon">ðŸ”’</div>
+            <div class="icon">&#x1F512;</div>
             <input id="pin" class="pin" type="password" inputmode="none" readonly />
           </div>
           <div class="msg" id="msg">Ready.</div>
@@ -303,7 +306,7 @@
       return;
     }
 
-    setMsg("Access grantedâ€¦","ok");
+    setMsg("Access granted&#x2026;","ok");
     triggerNodeRed({ event:"employee_login", page:"01-login", code:pinEl.value, ts:new Date().toISOString() });
     setTimeout(()=>location.href=NEXT_PAGE, NAV_DELAY_MS);
   }
@@ -333,6 +336,7 @@
 </script>
 </body>
 </html>
+
 
 
 
