--- a/dinner_surprise/napkin_rings.html
+++ b/dinner_surprise/napkin_rings.html
@@ -69,7 +69,7 @@
       display:flex;
       align-items:center;
       justify-content:center;
-      font-size:14px;
+      font-size:14px;\r\n      font-family: "Apple Color Emoji","Segoe UI Emoji","Noto Color Emoji",sans-serif;
       letter-spacing:.08em;
     }
 
@@ -465,6 +465,7 @@
 </script>
 </body>
 </html>
+
 
 
 
