--- a/dinner_surprise/roses.html
+++ b/dinner_surprise/roses.html
@@ -72,7 +72,7 @@
       display:flex;
       align-items:center;
       justify-content:center;
-      font-size:24px;
+      font-size:24px;\r\n      font-family: "Apple Color Emoji","Segoe UI Emoji","Noto Color Emoji",sans-serif;
     }
 
     .brand h1{
@@ -196,7 +196,7 @@
 
   <div class="topbar">
     <div class="brand">
-      <div class="logo">ðŸ½ï¸</div>
+      <div class="logo">&#x1F37D;&#xFE0F;</div>
       <div>
         <h1>Dining Room POS</h1>
         <div class="sub">Employee Access Terminal</div>
@@ -300,7 +300,7 @@
 
     if(current.join() === CODE.join()){
       locked = true;
-      statusEl.textContent = "Correct patternâ€¦";
+      statusEl.textContent = "Correct pattern&#x2026;";
       statusEl.classList.add("ok");
 
       triggerNR({
@@ -325,6 +325,7 @@
 </script>
 </body>
 </html>
+
 
 
 
