--- a/dinner_surprise/index.html
+++ b/dinner_surprise/index.html
@@ -108,6 +108,8 @@
     .field{
       width: 100%;
       max-width: 100%;
+      min-width: 0;
+      box-sizing: border-box;
     }
 
     .cardHeader{
