Another formatting issue

--- a/dinner_surprise/index.html
+++ b/dinner_surprise/index.html
@@ -93,6 +93,7 @@
       box-shadow: var(--shadow);
       padding: 18px;
       box-sizing:border-box;
+      overflow: hidden;
     }
 
     .left{
