fixed roses.html file

--- a/dinner_surprise/roses.html
+++ b/dinner_surprise/roses.html
@@ -218,6 +218,7 @@
       <button class="tetBtn" id="b3" type="button"></button>
     </div>
 
+    <div id="status" class="status" aria-hidden="true"></div>
     
   </div>
 
