Added puzzles to dinner_surprise

--- a/dinner_surprise/napkin_rings.html
+++ b/dinner_surprise/napkin_rings.html
@@ -335,10 +335,10 @@
 <script>
 (() => {
   const NODE_RED_URL = "http://192.168.1.50:1880/escape/event";
-  const NEXT_PAGE = "points_of_view.html";
+  const NEXT_PAGE = "index.html";
   const NAV_DELAY_MS = 50;
 
-  const ANSWERS = ["LOVE","ROMANCE","DESIRE","JOY"];
+  const ANSWERS = ["CHARM","YEARNING","DESIRE","TENDERNESS"];
   const cards = [...document.querySelectorAll(".fontCard")];
   const inputs = [...document.querySelectorAll(".wordInput")];
   const rows = ["r1","r2","r3"].map(id => document.getElementById(id));
