--- a/dinner_surprise/points_of_view.html
+++ b/dinner_surprise/points_of_view.html
@@ -229,7 +229,7 @@
 <script>
 (() => {
   const NODE_RED_URL = "http://192.168.1.50:1880/escape/event";
-  const NEXT_PAGE = "entree1.html";
+  const NEXT_PAGE = "napkin_rings.html";
   const NAV_DELAY_MS = 50;
 
   const CODE = ["N","NE","E","SE"];
